Fixed getLast